Les classes test ont été ajouté et les chemin aux classes ont été modifié car j'ai créé deux package... main et tests qui sont tous deux dans le module src